--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
-body {
+.full {
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.header {
+    display: flex;
+    background-color: #1F2937;
+}
