--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+
+body {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 .full {
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
 
 a {
@@ -17,4 +23,27 @@ ul {
 .header {
     display: flex;
     background-color: #1F2937;
+    color: #F9FAF8;
+    justify-content: space-between;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    display: flex;
+}
+
+.links {
+    display: flex;
+}
+
+.footer {
+    display: flex;
+    background-color:#1F2937;
+    color: #F9FAF8;
+    justify-content: center;
+    align-items: flex-end;
 }
