--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .full {
@@ -16,6 +17,7 @@ a {
 }
 
 ul {
+    display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -23,27 +25,64 @@ ul {
 
 .header {
     display: flex;
+    flex-direction: column;
     background-color: #1F2937;
     color: #F9FAF8;
     height: 300px;
-    padding: 10px 100px 10px 100px;
+    padding: 10px 150px 100px 150px;
+    gap: 60px;
 }
 
 .menu {
     display: flex;
-    flex: 1;
-    align-items: center;
     justify-content: space-between;
     gap: 10px;
 }
 
 .logo {
     display: flex;
+    font-size: 16px;
+    color: #f9faf8;
 }
 
+h1 {
+    margin: 0;
+}
+
+
 .links ul {
-    display: flex;
     gap: 16px;
+    font-size: 16px;
+}
+
+
+.leftside {
+    max-width: 500px;
+}
+
+.leftside h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+}
+
+.leftside p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.hero-btn {
+    background-color: #3882f6;
+    color: white;
+    padding: 5px 20px 5px 20px;
+    border-radius: 10px;
+}
+
+.hero-content {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .footer {
