--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ ul {
     flex-direction: column;
     background-color: #1F2937;
     color: #F9FAF8;
-    height: 300px;
-    padding: 10px 150px 150px 150px;
+    padding: 10px 150px 150px 100px;
     gap: 100px;
 }
 
@@ -95,9 +94,47 @@ h1 {
 }
 
 .section-one {
+    display: flex;
+    flex-direction: column;
     background-color: white;
-    height: 200px;
+    gap: 10px;
+    padding-bottom: 30px;
 }
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px 20px 0px;
+}
+
+.containers {
+    display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+    text-align: center;
+    padding: 0px 100px 0px 100px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    max-width: 150px;
+}
+
+.cardbox {
+    display: flex;
+    width: 150px;
+    height: 150px;
+    background-color: white;
+    border: solid 2px #3882f6;
+    border-radius: 20px;
+}
+
+.cardtext {}
+
 
 .section-two {
     background-color: #e5e7eb;
