--- a/style.css
+++ b/style.css
@@ -133,12 +133,23 @@ h1 {
     border-radius: 20px;
 }
 
-.cardtext {}
-
-
 .section-two {
     background-color: #e5e7eb;
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 150px;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 300;
+}
+
+.quote-credit {
+    font-weight: 900;
+    text-align: right;
+    padding-right: 30px;
 }
 
 .section-three {
