--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ ul {
     flex-direction: column;
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 10px 150px 150px 100px;
+    padding: 10px 150px 100px 100px;
     gap: 100px;
 }
 
@@ -44,7 +44,7 @@ ul {
     color: #f9faf8;
 }
 
-h1 {
+h1, h2, p {
     margin: 0;
 }
 
@@ -56,7 +56,10 @@ h1 {
 
 
 .leftside {
+    display: flex;
+    flex-direction: column;
     max-width: 500px;
+    gap: 10px;
 }
 
 .leftside h1 {
@@ -91,6 +94,7 @@ h1 {
     justify-content: center;
     align-items: center;
     margin-top: auto;
+    padding: 30px 0px;
 }
 
 .section-one {
@@ -154,5 +158,40 @@ h1 {
 
 .section-three {
     background-color: white;
-    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.callbox {
+    display: flex;
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding: 30px 150px;
+    margin: 50px 0px;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.calltext {
+    color: white;
+}
+
+.calltext p {
+    font-weight: 100;
+}
+
+.callbtn {
+    justify-content: center;
+    align-items: center;
+}
+
+.callbox button{
+    display: flex;
+    color: white;
+    background-color: #3882f6;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 5px 20px;
 }
